source/sass/buyers-guide/views/product.scss
$pni-product-breakpoint-larger: $bp-md;

.product-header {
  padding-bottom: 88px;
  position: relative;

  &.draft-product::before {
    content: "This product is in draft and only visible to CMS-authorised users.";
  }

  .seal-of-approval {
    @include seal-of-approval(1rem, 0, 76px, 76px, 140px, 140px);
  }
}

.related-product {
  .img-container {
    background: $gray-05;
    padding: 10px 0 0 10px;
  }

  .seal-of-approval {
    @include seal-of-approval(5px, 20px, 30px, 30px);
  }

  .adult-content-badge {
    @include adult-content-badge(5px, 20px, 33px, 28px);
  }
}

.product-section-padding-x {
  padding-left: 18px;
  padding-right: 18px;

  @media (min-width: $pni-product-breakpoint-larger) {
    padding-left: 5rem;
    padding-right: 5rem;
  }
}

.product-detail {
  margin-top: -88px;

  a:not(.btn),
  button:not(.btn) {
    text-decoration: underline;

    @include hover-focus-active {
      color: $dark-blue;
    }
  }

  .small-link {
    font-size: 18px;
    font-weight: 400;
    color: $gray-40;
  }

  button.small-link {
    border: none;
    background: none;
  }

  .copy-link-wrapper {
    order: 4;

    @media (min-width: $pni-product-breakpoint-larger) {
      order: unset;
    }

    .copy-link {
      position: relative;
      padding-left: 20px;

      &.copied {
        cursor: auto;
        color: $blue;
        text-decoration: none;
      }

      &::before {
        position: absolute;
        top: 0;
        left: 0;
        content: "";
        background-image: url(../_images/buyers-guide/icon-product-link.svg);
        background-repeat: no-repeat;
        background-position: center 65%;
        background-size: contain;
        width: 15px;
        height: 100%;
        display: block;
      }
    }
  }

  h3.body,
  h4 {
    font-family: "Nunito Sans";
  }

  .worst-case-box {
    position: relative;
    border-style: solid;
    border-width: 1px;
    border-image: linear-gradient(to left, $pni-pink 0%, $pni-blue 100%) 1 /
      auto;
    margin-top: 3.5rem;

    .creep-face-emoji-wrapper {
      $font-size: 3rem;
      $padding-x: 1rem;

      background: $white;
      position: absolute;
      top: -$font-size / 2;
      left: calc(50% - #{$font-size} / 2 - #{$padding-x});
      font-size: $font-size;
      padding: 0 $padding-x;

      .creep-face-emoji {
        top: 0;
        margin: 0;
      }
    }
  }

  .it-uses,
  .signup-requirement {
    margin-bottom: $spacer;

    @media (min-width: $pni-product-breakpoint-larger) {
      margin-bottom: $spacer * 1.5;
    }

    .separator {
      color: $gray-20;
    }
  }
}

.copy-link {
  font-size: 16px;
  color: $black;
}

.spy {
  display: flex;
  align-items: center;
  word-break: break-word;
  margin-bottom: 1rem;

  @media (min-width: $pni-product-breakpoint-larger) {
    margin-bottom: 0;
  }

  img {
    margin-right: 15px;
  }

  a {
    text-decoration: underline;
    color: $black;
    font-weight: 400;
  }
}

.minimum-security {
  background: $gray-05;

  h3 {
    $badge-width-mobile: 40px;
    $badge-width: 30px;

    position: relative;
    padding-left: calc(#{$badge-width-mobile} + 8px);

    @media (min-width: $pni-product-breakpoint-larger) {
      padding-left: calc(#{$badge-width} + 6px);
    }

    &:before {
      content: "";
      position: absolute;
      top: 0;
      left: 0;
      background: url(../_images/buyers-guide/badge-star-mini.svg) center /
        contain no-repeat;
      width: $badge-width-mobile;
      height: 100%;

      @media (min-width: $pni-product-breakpoint-larger) {
        width: $badge-width;
      }
    }
  }

  .criterion:last-child {
    border-bottom: none;
  }

  .rating {
    .security-score {
      @include heading("Zilla Slab", 300, 0, $black, $white);
      @include scaleText(40px, 46px);
    }

    .full-security-score {
      @include heading("Zilla Slab", 300, 0, $black, $white);
      @include scaleText(20px, 46px);
    }
  }
}

.criterion {
  padding: 1rem 0;

  &:not(.no-border) {
    border-color: $gray-20;
    border-style: solid;
    border-width: 1px 0 0 0;

    &:last-child {
      border-bottom-width: 1px;
    }
  }

  &.bottom-border-only {
    border-top: 0;
  }

  .primary-info {
    display: flex;
    justify-content: space-between;

    strong {
      font-weight: 700;
    }
  }

  a {
    text-decoration: underline;
    color: $black;
    font-weight: 400;
  }

  p {
    margin-bottom: 0;
  }

  button.toggle {
    align-self: center;
    margin-left: 10px;
    background: url(../_images/buyers-guide/plus.svg) center center no-repeat;
    background-size: contain;
    border: 0;
    width: 24px;
    height: 24px;
    outline: 0;
    transition: transform 100ms ease-in-out;
    transform-origin: 50% 50%;

    &.open {
      transform: rotate(45deg);
    }
  }

  + p,
  ul {
    // have to override this since PNI does not follow Foundation style guide
    @include text-base-style(null, 300, $black, $white);
    @include scaleText(16px, 24px);
  }
}

.dotted-section {
  &::before {
    display: block;
    content: " "; /* :before and :after won't work without content... =( */
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    height: 228px;
    background-image: url(../_images/buyers-guide/dot-pattern.svg);
    background-size: 9px 9px;
  }
}

.product-update {
  .title {
    font-family: "Zilla Slab";
    font-size: 22px;
    color: $black;
  }

  .author {
    font-family: "Nunito Sans";
    font-size: 12px;
    color: $gray-40;
  }

  .snippet {
    font-family: "Nunito Sans";
    font-size: 16px;
    color: $black;
    letter-spacing: 0;
    line-height: 24px;
  }
}

.creep-vote-target {
  position: relative;
  min-height: 380px;
  min-width: 290px;
  border: 1px solid $gray-20;
  padding-left: 1rem;
  padding-right: 1rem;

  @media (min-width: $pni-product-breakpoint-larger) {
    margin-left: -0.5rem;
    margin-right: -0.5rem;
    padding: 1.5rem 3.75rem;
  }
}

.creep-vote {
  .what-you-think-label {
    $line-height: 24px;
    $padding-x: 1rem;
    $padding-y: 0.5rem;
    $shadow-width: calc(#{$padding-x} + 10px);

    position: absolute;
    top: 0;
    left: 1rem;
    transform: translateY(-50%);
    background: $gray-60;
    padding: $padding-y 1rem;

    &.h5-heading {
      color: $white;
    }

    @media (min-width: $pni-product-breakpoint-larger) {
      left: calc(#{$shadow-width} * -1);

      &::before {
        position: absolute;
        left: 0;
        top: 100%;
        content: "";
        width: 0;
        height: 0;
        border-style: solid;
        border-width: 0 $shadow-width $shadow-width 0;
        border-color: transparent $black transparent transparent;
      }
    }
  }
}

.helptext {
  font-style: italic;
  margin-top: 0.5rem;
  margin-right: 5rem;
}

// Coral Embed
#coral-talk-stream_iframe {
  body {
    padding-bottom: 0;
  }
}

